file_uploader_helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  #   nginx.ingress.kubernetes.io/enable-cors: "true"
  #   nginx.ingress.kubernetes.io/cors-allow-origin: "*"
  #   nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
  #   nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /
    - host: backend.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8081
            path: /
